test/Lower/circt/round_trip/conversion_failure_exits_nonzero.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/Lower/circt/round_trip/conversion_failure_exits_nonzero.nsl
// — M6 US1 harness fixture (T029). Asserts FR-028 fail-fast
// behaviour: when the M6 NSLToCIRCTPass cannot legalize a
// reachable `nsl::*` op, `nslc -emit=hw` exits non-zero AND emits
// a diagnostic naming the unmatched op.
//
// **Phase 6 status: retired-as-XFAIL** — Phase 6 leaf-op patterns
// (T061–T126) closed the previous Phase-4 fail-fast path (output-
// port writes whose source is a reg now lower cleanly via
// StatePatterns + the firreg/compreg materialisation chain). Every
// reachable nsl op produced by the standard `.nsl` source surface
// has a Phase-6 lowering; consequently no `.nsl`-source-driven
// fail-fast is exercisable from this fixture's input shape.
//
// **Where the fail-fast is now exercised**: T138 fixture
// `structural_generate_fail_fast.test` (a hand-authored `.mlir`
// containing a residual `nsl.structural_generate` op — an invariant
// violation that should never escape M5's pass pipeline; M6 is the
// canary that catches such bugs). That fixture exercises the same
// `error: failed to legalize operation 'nsl.<X>'` diagnostic from
// the standard `applyFullConversion` path.
//
// This fixture is left in place but XFAIL'd to preserve the audit
// trail (per Phase-8 polish convention; retire vs XFAIL is the
// project pattern for fixtures that have outlived their original
// failure mode but whose history is worth keeping in tree).

// XFAIL: *
// RUN: not %nslc -emit=hw %s 2>&1 | %FileCheck %s

declare M {
  input a[8];
  output q[8];
}

module M {
  reg r[8] = 0;
  r := a;
  q = r;
}

// CHECK: error: M6 cannot lower output-port write
